# tec-gtfs

./: .gitignore  Cargo.toml  Dockerfile  README.md  proto  test
src/: logger.rs  main.rs  quadtree.rs  store.rs
src/api/: gtfs.rs  info.rs  mod.rs  shape.rs  stops.rs  theorical.rs
