[package]
name = "tec-gtfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.2", features = ["ws", "macros"] }
tower-http = { version = "0.5.0", features = ["cors"] }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
gtfs-structures = "0.39.0"
ahash = "0.8.6"
